apps/base/sparky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparky-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparky-server
  template:
    metadata:
      labels:
        app: sparky-server
    spec:
      containers:
        - name: sparky-server
          image: codewithcj/sparkyfitness_server:v1.7.3
          ports:
            - containerPort: 3010
              name: http

          resources:
            requests:
              memory: "368Mi"
              cpu: "15m"
            limits:
              memory: "768Mi"
              cpu: "500m"

          volumeMounts:
            - mountPath: /app/SparkyFitnessServer/uploads
              name: data
              subPath: uploads
            - mountPath: /app/SparkyFitnessServer/backup
              name: data
              subPath: backup

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sparky-server-data-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparky-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sparky-frontend
  template:
    metadata:
      labels:
        app: sparky-frontend
    spec:
      containers:
        - name: sparky-frontend
          image: codewithcj/sparkyfitness:v1.7.3
          ports:
            - containerPort: 80
              name: http

          resources:
            requests:
              memory: "100Mi"
              cpu: "15m"
            limits:
              memory: "200Mi"
              cpu: "100m"
