apps/base/sparky/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparky-server
spec:
  ports:
    - port: 3010
      targetPort: 3010
      name: http
      protocol: TCP
  selector:
    app: sparky-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sparky-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: sparky-frontend
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparky-ingress
  namespace: sparky
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "sparky.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sparky-frontend
                port:
                  name: http
  tls:
    - hosts:
        - "sparky.dimarco-server.site"
      secretName: sparky-tls
